# document-mcp

./: .env.example  .flake8  .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT_NEXT_STEPS.md  Dockerfile  MULTI_PROVIDER_GUIDE.md  OAUTH_IMPLEMENTATION_STATUS.md  QUICK_OAUTH_FIX.md  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  server.py
.claude/agents/: ai-engineer.md  backend-architect.md  behavior-analyst.md  code-refactoring-specialist.md  data-flow-analyst.md  debug-analyzer.md  devops-automator.md  frontend-system-builder.md  opus-researcher.md  opus-subagent-supervisor.md  performance-optimizer.md  qa-engineer.md  round-robin-facilitator.md  security-auditor.md  sprint-prioritizer.md  supabase-specialist.md  test-writer-fixer.md  ui-design-expert.md
.claude/commands/: 0-context.md  1-ask.md  1-research.md  10-optimization-finalization.md  2-plan.md  2-spec.md  3-implement.md  4-debug.md  5-qa.md  6-test.md  7-docs.md  8-deep-research.md  9-comprehensive-qa.md
.documents_storage/long_story_document/: 05-chapter.md
.github/workflows/: deploy-cloud-run.yml  python-test.yml  release.yml
benchmarks/: __init__.py  config.py  config_loader.py  metrics.py  runner.py  scenarios.py  tools.py
benchmarks/descriptions/: default.yaml  minimal.yaml  verbose.yaml
benchmarks/models/: claude-haiku-4.5.yaml  gemini-3-flash.yaml  gpt-5-mini.yaml
benchmarks/tool_sets/: 2-tool.yaml  4-tool.yaml  8-tool.yaml
docs/: ARCHITECTURAL_ANALYSIS.md  ARCHITECTURE_IDEAS.md  BENCHMARKING.md  MCP_DESIGN_PATTERNS.md  OAUTH_2.1_ECOSYSTEM.md  RESULTS_SUMMARY.md  TODO.md  TOOL_TEST_PROMPT.md  VARIANT_ARCHITECTURE.md  VARIANT_RESULTS.md  deployment-examples.md  manual_testing.md
document_mcp/: README.md  TECHNICAL_REFERENCE.md  conftest.py  doc_tool_server.py  doc_tool_server_backup.py  error_handler.py  exceptions.py  helpers.py  logger_config.py  mcp_calls.log.1  mcp_client.py  metrics_config.py  models.py  observability.py  test_doc_tool_server.py
document_mcp/batch/: __init__.py  executor.py  global_registry.py  models.py  registry.py
document_mcp/config/: __init__.py  settings.py
document_mcp/models/: __init__.py  analysis.py  content.py  core.py  documents.py  metadata.py
document_mcp/storage/: __init__.py  base.py  factory.py  gcs.py  local.py
document_mcp/tools/: __init__.py  batch_tools.py  chapter_tools.py  content_tools.py  discovery_tools.py  document_tools.py  metadata_tools.py  overview_tools.py  paragraph_tools.py  safety_tools.py
document_mcp/utils/: __init__.py  decorators.py  embedding_cache.py  file_operations.py  frontmatter.py  metadata_schemas.py  validation.py
dspy_optimizer/: __init__.py  __main__.py  optimizer.py
example_agent/: agent.py  conftest.py  test_agent.py
prompt_backups/: optimization_full_20251228_120303.json  optimization_full_latest.json
prompt_optimizations/full/: manifest.json
prompt_optimizations/full/history/: v001.json  v002.json  v003.json
prompt_optimizer/: README.md  __init__.py  __main__.py  cli.py  core.py  evaluation.py
sample_doc/sample_document/: 01-chapter1.md  02-chapter2.md  03-chapter3.md
scripts/: quality.py  run_pytest.py  test_metrics.py  test_pip_install.sh  validate_tool_consistency.py
scripts/development/metrics/: README.md  test_production.py
scripts/development/telemetry/: README.md
src/: __init__.py
src/agents/: __init__.py  simple_agent.py
src/agents/planner_agent/: __init__.py  main.py  models.py  prompts.py
src/agents/react_agent/: __init__.py  main.py  models.py  parser.py  prompts.py
src/agents/shared/: agent_base.py  agent_factory.py  cli.py  config.py  error_handling.py  optimization_store.py  output_formatter.py  performance_metrics.py  prompt_components.py  prompt_optimization_analysis.py  skill_loader.py  tool_descriptions.py
src/agents/simple_agent/: __init__.py  (+3 more)
tests/: README.md  __init__.py  conftest.py  test_metrics.py  testing_guidelines.md  tool_imports.py
tests/e2e/: __init__.py  test_agents_e2e.py  test_react_agent_e2e.py  test_simple_agent_e2e.py  validation_utils.py
tests/evaluation/: README.md  __init__.py  config.py  evaluation_utils.py  llm_evaluation_layer.py  run_evaluation.py  test_agent_performance.py  test_simple_integration.py  test_tool_selection_benchmark.py
tests/fixtures/: __init__.py  simple_responses.py  test_prompt_demo.py
tests/integration/: __init__.py  mcp_client.py  test_agent_performance_error_handling.py  test_agents_mcp_integration.py  test_agents_stdio.py  test_automatic_snapshot_system.py  test_batch_integration.py  test_batch_operations.py  test_batch_operations_with_scope_tools.py  test_chapter_operations.py  test_doc_tool_server.py  test_document_operations.py  test_embedding_cache_integration.py  test_mcp_stdio_e2e.py  test_mcp_stdio_integration.py  test_metadata_operations.py  test_paragraph_operations.py  test_planner_agent.py  test_react_agent.py  test_safety_decorator_coverage.py  test_safety_features.py  test_scope_based_tools_complex_scenarios.py  test_simple_agent.py  test_unified_tools.py  test_version_control_tools.py
tests/shared/: __init__.py  agent_base.py  assertions.py  environment.py  fixtures.py  mock_factories.py  mock_factory.py  server_manager.py  test_data.py  test_environment.py
tests/unit/: __init__.py  test_agent_performance_metrics.py  test_agent_prompt_validation.py  test_agent_shared.py  test_atomic_paragraph_tools.py  test_batch_execution.py  test_doc_tool_server.py  test_doc_tool_server_write_tools.py  test_embedding_cache.py  test_error_handler.py  test_exceptions.py  test_file_operations.py  test_frontmatter.py  test_logger_config.py  test_metrics_config.py  test_observability.py  test_planner_agent.py  test_react_agent.py  test_react_agent_components.py  test_react_agent_main.py  test_react_agent_parser.py  test_react_execution_loop.py  test_react_step.py  test_react_system_prompt.py  test_scope_based_tools_validation.py  test_semantic_search.py  test_simple_agent.py  test_storage.py  test_summary_integration.py  test_termination_logic.py  test_test_data_management.py
(+5 files in other folders)
