[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "document-mcp"
version = "0.0.1"
authors = [
  { name="clchinkc" },
]
description = "A MCP server for managing structured Markdown documents"
readme = "document_mcp/README.md"
requires-python = ">=3.13"
keywords = ["mcp", "document", "management"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.21.0",
    "pydantic-ai>=0.0.14",
    "mcp[cli]>=1.0.0",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.8.3",
    "openai",
    "requests",
    "prometheus-client>=0.17.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-instrumentation>=0.42b0",
    "opentelemetry-exporter-prometheus>=0.55b0",
    "opentelemetry-exporter-otlp>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
    "opentelemetry-instrumentation-requests>=0.42b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov",
    "pytest-mock>=3.10.0",
    "pytest-env>=0.5.2",
    "black",
    "flake8",
    "isort",
    "mypy",
    "pydocstyle",
]

[project.urls]
"Homepage" = "https://github.com/document-mcp/document-mcp"
"Bug Tracker" = "https://github.com/document-mcp/document-mcp/issues"

[project.scripts]
"document-mcp" = "document_mcp.doc_tool_server:main"

[tool.setuptools]
packages = ["document_mcp"]

[tool.setuptools.package-data]
document_mcp = ["*.ini"]

# Black configuration
[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

# MyPy configuration
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
pydantic-ai = "^0.4.0"
python-dotenv = "^1.0.1"
pytest = "^8.4.1"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.2.1"
pytest-xdist = "^3.7.0"
pytest-env = "^1.1.3"
uvicorn = "^0.30.5"
requests = "^2.32.3"
aiohttp = "^3.9.5" 